# ls3render

./: CMakeLists.txt  gldemo.cc  ls3render.cpp  ls3render.h  macros.hpp  render_object.cpp  render_object.hpp  renderall.cc  scene.cpp  scene.hpp  shader_manager.cpp  shader_manager.hpp  shader_parameters.hpp  texture.hpp  utils.hpp
assets/: fragment_shader.glsl  vertex_shader.glsl
